NFT connector - get TX
